[tool.poetry]
name = "service1"
version = "0.1.0"
description = ""
authors = ["Fritzsche, Rico, SNL IT P&P, 2410, BN, external <rico@bluvolve.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
fastapi = "^0.112.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
